/WINODA-6 improves navigation and fonts

--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_navigation.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_navigation.scss
@@ -10,6 +10,16 @@
     float: none;
     display: flex;
     justify-content: flex-end;
+    .navbar-nav {
+      & > li > a {
+        color: $wText;
+        padding: .5rem 1rem;
+        &:focus,
+        &:hover {
+          color: $wBlue;
+        }
+      }
+    }
   }
 
   .project-main-nav {
