--- a/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_layout.scss
+++ b/src/main/resources/META-INF/resources/mir-layout/scss/project_styles/_layout.scss
@@ -6,6 +6,19 @@
 // set the defaults for all responsive levels here
 // no (xl) media query necessary (desktop first)
 
+  .w-banner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    background-image: url('../../../../images/banner-blue.png');
+    background-position: top right;
+    background-size: cover;
+    min-height: 300px;
+    padding-left: 3rem;
+    color: white;
+  }
+
 // Large devices (desktops) and below: <= 1200px
 @include media-breakpoint-down(lg) {
   // add/overwrite styles for responsive level lg and lower
